src/test/ui/feature-gates/feature-gate-static-nobundle.rs
#[link(name = "foo", kind = "static-nobundle")]
//~^ ERROR: kind="static-nobundle" is unstable
extern "C" {}

fn main() {}
